2004-06-18  Sarfraaz Ahmed <asarfraaz@novell.com>

	* addressbook/e-book-backend-exchange.c : Modified the backend 
	members to now accept "opid".
	* addressbook/e-book-backend-gal.c : Similar

2004-06-18  Sushma Rai  <rsushma@novell.com>

	* addressbook/e-book-backend-exchange.c (proppatch_date): Freeing
	the date entered only after forming the time stamp.
	Fixes #60342
 
2004-06-17  Sushma Rai  <rsushma@novell.com>

	* addressbook/e-book-backend-exchange.c 
	(e_book_backend_exchange_get_static_capabilites): Added the 
	static capability "no-contactlist-option" to disable the menu
	option to create contact lists for the exchange account.
	FIX for #57130 

2004-06-16  Dan Winship  <danw@novell.com>

	* camel/camel-exchange-provider.c (exchange_conf_entries): Add
	junk flags

	* storage/exchange-account.c (exchange_account_new): Record the
	"filter_junk" and "filter_junk_inbox" flag values.

	* mail/mail-stub-exchange.c (get_folder): Set the "filter junk"
	flag on the folder if appropriate

	* camel/camel-exchange-store.c (construct): If "filter_junk" is
	enabled, set the VJUNK flag on the store.

	* camel/camel-exchange-folder.c (camel_exchange_folder_construct):
	If the backend set the "filter junk" flag, set that on the folder.

2004-06-16  Dan Winship  <danw@novell.com>

	* addressbook/e-book-backend-gal.c (query_prop_to_ldap): If the
	prop is "email", translate it to "email_1" so it matches
	correctly.
	(get_contact_list): If build_query returns a NULL query, just
	return success immediately (with no matches) rather than searching
	the entire GC.

	(ldap_search_dtor): we don't need to lock/unlock the view's mutex
	anymore. [copied from e-book-backend-ldap.c]

	(ldap_search_handler): remove the ref/unref of the book view here.
        (e_book_backend_ldap_search): move the ref of the book view
	here.
        (ldap_search_dtor): and the unref to here. [copied from
	e-book-backend-ldap.c]

2004-06-16  Sarfraaz Ahmed <asarfraaz@novell.com>
