@@ -1,3 +1,14 @@
+2004-06-19  Sarfraaz Ahmed <asarfraaz@novell.com>
+
+	Fix for #57868
+	* calendar/e-cal-backend-exchange.c (e_cal_backend_exchange_in_cache):
+	Modified to now take in the href and update it in the cache
+	* calendar/e-cal-backend-exchange.h : Likewise
+	* calendar/e-cal-backend-exchange-calendar.c (get_changed_events):
+	Pass the href to the new e_cal_backend_exchange_in_cache method.
+	* calendar/e-cal-backend-exchange-tasks.c (get_changed_tasks)
+	(create_task_object): Likewise
+
 2004-06-18  Sarfraaz Ahmed <asarfraaz@novell.com>
 
 	* addressbook/e-book-backend-exchange.c : Modified the backend 
